# Korii-Bot

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE_SUMMARY  README.md  bot.py  config.py  config.toml.example  docker-compose.yml  main.py  pyproject.toml  requirements.txt  schema.sql
.github/workflows/: deploy.yml  docker.yml
bot/: __init__.py  __main__.py  bot.py  config.py
bot/assets/: lucky_messages.txt  prank_messages.txt
bot/models/: __init__.py  tree.py
bot/utilities/: __init__.py  clear.py  config.py  embed.py  pillow.py  subclasses.py  tree.py
data/: config.toml.example  schema.sql
data/messages/: unlucky_messages.txt
extensions/: timezones.py
extensions/config/: __init__.py  _base.py  levelling.py  logging.py
extensions/dq/: __init__.py  _base.py  calculators.py
extensions/economy/: __init__.py  _base.py  bank.py  basic.py  gambling.py  job.py  rewards.py  utils.py  work.py
extensions/events/: __init__.py  _base.py  avatars.py  dev.py  errors.py  ghost.py  guild.py  ipc.py  ping.py
extensions/fun/: __init__.py  _base.py  actions.py  animals.py  dog.py  random.py
extensions/help/: __init__.py  _base.py  errors.py  help.py
extensions/images/: __init__.py  jeyy_api.py
extensions/ipc/: __init__.py
extensions/levelling/: __init__.py  _base.py  commands.py  events.py
extensions/logging/: __init__.py  _base.py  join_leave.py  member.py  message.py  server.py  voice.py
extensions/moderation/: __init__.py  _base.py  basic.py
extensions/utility/: __init__.py  _base.py  bot.py  config.py  define.py  download.py  embed.py  info.py  neofetch.py  ping.py  source.py  spotify.py  translate.py  vocab.py
extensions/world/: __init__.py  faq.py  introductions.py  join.py  welcome.py
utils/: __init__.py  calculators.py  commands.py  constants.py  context.py  definition.py  logging.py  paginator.py  utils.py
views/: embed.py
(+45 files in other folders)
